<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/backgroundMainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_practice_mode"
    tools:context=".Controllers.MainActivity">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:fillViewport="true"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/switchModes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_title"
        app:layout_constraintVertical_bias="0.25">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/addButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="14dp"
                android:layout_marginRight="14dp"
                android:layout_marginBottom="14dp"
                android:background="#00DFE7E0"
                android:contentDescription="@string/AdditionButton"
                app:layout_constraintBottom_toTopOf="@+id/multButton"
                app:layout_constraintEnd_toStartOf="@+id/minusButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/practice_plus_button_src" />

            <ImageButton
                android:id="@+id/multButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="14dp"
                android:layout_marginRight="14dp"
                android:background="#00DFE7E0"
                android:contentDescription="@string/MultiplicationButton"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/divButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addButton"
                app:srcCompat="@drawable/practice_multiplication_button_src" />

            <ImageButton
                android:id="@+id/minusButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginLeft="14dp"
                android:layout_marginBottom="14dp"
                android:background="#00DFE7E0"
                android:contentDescription="@string/SubtractionButton"
                app:layout_constraintBottom_toTopOf="@+id/divButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/addButton"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/practice_minus_button_src" />

            <ImageButton
                android:id="@+id/divButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginLeft="14dp"
                android:layout_marginTop="14dp"
                android:background="#00DFE7E0"
                android:contentDescription="@string/DivisionButton"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/multButton"
                app:layout_constraintTop_toBottomOf="@+id/minusButton"
                app:srcCompat="@drawable/practice_division_button_src" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ToggleButton
        android:id="@+id/switchModes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@drawable/toggle_selector"
        android:fontFamily="@font/cambay"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:textColor="#000000"
        android:textOff="@string/GTCM"
        android:textOn="@string/GTPM"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/titlepractice" />

</androidx.constraintlayout.widget.ConstraintLayout>