<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_practice_mode"
    tools:context=".Controllers.QuizzActivity">

    <ImageView
        android:id="@+id/title_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/TitleBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/titlepracticeadd" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_imageView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/frameLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/BackgroundLayout"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/operation_board" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="120dp"
                android:contentDescription="@string/BackgroundLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/line" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/imageView4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.86"
                app:layout_constraintStart_toEndOf="@+id/operation_textView"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/top_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:fontFamily="serif"
                    android:textColor="#000000"
                    android:textSize="40sp" />

                <TextView
                    android:id="@+id/bottom_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:fontFamily="serif"
                    android:textColor="#000000"
                    android:textSize="40sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/operation_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:textColor="#000000"
                android:textSize="40sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.9" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView4">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp">

                    <Button
                        android:id="@+id/btn_choice1"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="120dp"
                        android:layout_height="100dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/btn_options"
                        android:text="@string/ButtonDefault"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/btn_choice2"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="120dp"
                        android:layout_height="100dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/btn_options"
                        android:text="@string/ButtonDefault"
                        android:textSize="30sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="10dp">

                    <Button
                        android:id="@+id/btn_choice3"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="120dp"
                        android:layout_height="100dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/btn_options"
                        android:text="@string/ButtonDefault"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/btn_choice4"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="120dp"
                        android:layout_height="100dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/btn_options"
                        android:text="@string/ButtonDefault"
                        android:textSize="30sp" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/lvl_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/alegreya_italic"
                android:textColor="#000000"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/btn_leave"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/btn_lightblue"
            android:text="@string/Leave" />

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/btn_next"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/btn_lightblue"
            android:text="@string/Next" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>