<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_challenge_mode"
    tools:context=".Controllers.ChallengeQuizzActivity">

    <ImageView
        android:id="@+id/chllenge_title_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/TitleBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/titlechallengeadd" />


    <TextView
        android:id="@+id/timmerChallenge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:paddingBottom="8dp"
        android:paddingTop="2dp"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chllenge_title_imageView" />

    <ScrollView
        android:id="@+id/scrView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="4dp"
        android:fillViewport="true"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/right_ans_txtView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timmerChallenge">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/frameLayoutChallenge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/BackgroundLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/challenge_operation_board" />

            <ImageView
                android:id="@+id/imgView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="120dp"
                android:contentDescription="@string/BackgroundLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/challenge_line" />

            <LinearLayout
                android:id="@+id/life_LinearLayout"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imgView3">

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#00FFFFFF"
                    app:srcCompat="@drawable/life" />

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#00FFFFFF"
                    app:srcCompat="@drawable/life" />

                <ImageButton
                    android:id="@+id/imageButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#00FFFFFF"
                    app:srcCompat="@drawable/life" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/imgView4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.86"
                app:layout_constraintStart_toEndOf="@+id/challenge_operation_textView"
                app:layout_constraintTop_toBottomOf="@+id/life_LinearLayout">

                <TextView
                    android:id="@+id/challenge_top_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:fontFamily="serif"
                    android:textColor="#000000"
                    android:textSize="35sp" />

                <TextView
                    android:id="@+id/challenge_bottom_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:fontFamily="serif"
                    android:textColor="#000000"
                    android:textSize="35sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/challenge_operation_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:textColor="#000000"
                android:textSize="35sp"
                app:layout_constraintBottom_toBottomOf="@+id/imgView4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/imgView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgView4">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp">

                    <Button
                        android:id="@+id/challenge_btn_choice1"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="120dp"
                        android:layout_height="100dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/challenge_btn_options"
                        android:text="@string/ButtonDefault"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/challenge_btn_choice2"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="120dp"
                        android:layout_height="100dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/challenge_btn_options"
                        android:text="@string/ButtonDefault"
                        android:textSize="30sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="10dp">

                    <Button
                        android:id="@+id/challenge_btn_choice3"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="120dp"
                        android:layout_height="100dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/challenge_btn_options"
                        android:text="@string/ButtonDefault"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/challenge_btn_choice4"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="120dp"
                        android:layout_height="100dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/challenge_btn_options"
                        android:text="@string/ButtonDefault"
                        android:textSize="30sp" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/nextLvl_txtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/alegreya_italic"
                android:text="TextView"
                android:textColor="#000000"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <TextView
        android:id="@+id/right_ans_txtView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/alegreya_italic"
        android:gravity="center_horizontal"
        android:text="@string/Right_answers"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/record_txtView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/alegreya_italic"
        android:gravity="center_horizontal"
        android:text="@string/Right_answers_to_record"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
